Fix overflow

--- a/content/themes/light/sass/views/_front-page.scss
+++ b/content/themes/light/sass/views/_front-page.scss
@@ -588,6 +588,11 @@
     font-family: $font-alt;
     text-align: center;
 
+    .container,
+    * {
+      overflow: visible;
+    }
+
     .numero {
       @include column(1/4);
 
