--- a/content/themes/pulinafourteen/sass/layout.scss
+++ b/content/themes/pulinafourteen/sass/layout.scss
@@ -505,6 +505,11 @@ a.join-btn {
 
 .frontpage, .infograafit {
   @include col(1/2, $gutter: 0);
+
+  .container,
+  * {
+    overflow: visible;
+  }
 }
 
 .frontpage {
